--- a/css/upgrade.css
+++ b/css/upgrade.css
@@ -1,3 +1,6 @@
+h1, h2, h3, h4, h5, h6 {
+font-family: 'Open Sans', Helvetica, Arial, Lucida, sans-serif;				}
+
 
 
 #lang_sel a, #lang_sel a.lang_sel_sel{color:#444444;}
@@ -46,53 +49,10 @@ body.et_pb_button_helper_class .et_pb_button,
 .woocommerce.et_pb_button_helper_class a.button, .woocommerce-page.et_pb_button_helper_class a.button, .woocommerce.et_pb_button_helper_class button.button, .woocommerce-page.et_pb_button_helper_class button.button, .woocommerce.et_pb_button_helper_class input.button, .woocommerce-page.et_pb_button_helper_class input.button, .woocommerce.et_pb_button_helper_class #respond input#submit, .woocommerce-page.et_pb_button_helper_class #respond input#submit, .woocommerce.et_pb_button_helper_class #content input.button, .woocommerce-page.et_pb_button_helper_class #content input.button {
 color: #092545 !important;
 }
-h1, h2, h3, h4, h5, h6, .et_quote_content blockquote p, .et_pb_slide_description .et_pb_slide_title {
-line-height: 1.3em;
-}
-@media only screen and ( min-width: 981px ) {
-.et_pb_section { padding: 0% 0; }
-.et_pb_section.et_pb_section_first { padding-top: inherit; }
-.et_pb_fullwidth_section { padding: 0; }
-.et_pb_row { padding: 1% 0; }
-h1 { font-size: 28px; }
-h2, .product .related h2, .et_pb_column_1_2 .et_quote_content blockquote p { font-size: 24px; }
-h3 { font-size: 20px; }
-h4, .et_pb_circle_counter h3, .et_pb_number_counter h3, .et_pb_column_1_3 .et_pb_post h2, .et_pb_column_1_4 .et_pb_post h2, .et_pb_blog_grid h2, .et_pb_column_1_3 .et_quote_content blockquote p, .et_pb_column_3_8 .et_quote_content blockquote p, .et_pb_column_1_4 .et_quote_content blockquote p, .et_pb_blog_grid .et_quote_content blockquote p, .et_pb_column_1_3 .et_link_content h2, .et_pb_column_3_8 .et_link_content h2, .et_pb_column_1_4 .et_link_content h2, .et_pb_blog_grid .et_link_content h2, .et_pb_column_1_3 .et_audio_content h2, .et_pb_column_3_8 .et_audio_content h2, .et_pb_column_1_4 .et_audio_content h2, .et_pb_blog_grid .et_audio_content h2, .et_pb_column_3_8 .et_pb_audio_module_content h2, .et_pb_column_1_3 .et_pb_audio_module_content h2, .et_pb_gallery_grid .et_pb_gallery_item h3, .et_pb_portfolio_grid .et_pb_portfolio_item h2, .et_pb_filterable_portfolio_grid .et_pb_portfolio_item h2 { font-size: 16px; }
-h5 { font-size: 14px; }
-h6 { font-size: 13px; }
-.et_pb_slide_description .et_pb_slide_title { font-size: 42px; }
-.woocommerce ul.products li.product h3, .woocommerce-page ul.products li.product h3, .et_pb_gallery_grid .et_pb_gallery_item h3, .et_pb_portfolio_grid .et_pb_portfolio_item h2, .et_pb_filterable_portfolio_grid .et_pb_portfolio_item h2, .et_pb_column_1_4 .et_pb_audio_module_content h2 { font-size: 14px; }
-.footer-widget h4 { font-size: 14px; }
-.et_header_style_left #et-top-navigation, .et_header_style_split #et-top-navigation  { padding: 28px 0 0 0; }
-.et_header_style_left #et-top-navigation nav > ul > li > a, .et_header_style_split #et-top-navigation nav > ul > li > a { padding-bottom: 28px; }
-.et_header_style_split .centered-inline-logo-wrap { width: 55px; margin: -55px 0; }
-.et_header_style_split .centered-inline-logo-wrap #logo { max-height: 55px; }
-.et_pb_svg_logo.et_header_style_split .centered-inline-logo-wrap #logo { height: 55px; }
-.et_header_style_centered #top-menu > li > a { padding-bottom: 10px; }
-.et_header_style_centered #main-header .logo_container { height: 55px; }
-			#logo { max-height: 55%; }
-									.et_pb_svg_logo #logo { height: 55%; }
-.et_header_style_centered.et_hide_primary_logo #main-header:not(.et-fixed-header) .logo_container, .et_header_style_centered.et_hide_fixed_logo #main-header.et-fixed-header .logo_container { height: 9.9px; }
-.et_header_style_left .et-fixed-header #et-top-navigation, .et_header_style_split .et-fixed-header #et-top-navigation { padding: 28px 0 0 0; }
-.et_header_style_left .et-fixed-header #et-top-navigation nav > ul > li > a, .et_header_style_split .et-fixed-header #et-top-navigation nav > ul > li > a  { padding-bottom: 28px; }
-.et_header_style_centered header#main-header.et-fixed-header .logo_container { height: 55px; }
-.et_header_style_split .et-fixed-header .centered-inline-logo-wrap { width: 55px; margin: -55px 0;  }
-.et_header_style_split .et-fixed-header .centered-inline-logo-wrap #logo { max-height: 55px; }
-.et_pb_svg_logo.et_header_style_split .et-fixed-header .centered-inline-logo-wrap #logo { height: 55px; }
-		.et-fixed-header .et_search_form_container input::-moz-placeholder { color: #092545 !important; }
-.et-fixed-header .et_search_form_container input::-webkit-input-placeholder { color: #092545 !important; }
-.et-fixed-header .et_search_form_container input:-ms-input-placeholder { color: #092545 !important; }
-.et-fixed-header #top-menu li.current-menu-ancestor > a,
-.et-fixed-header #top-menu li.current-menu-item > a { color: #4f4f4f !important; }
-										}
-  @media only screen and ( min-width: 1450px) {
-	.et_pb_row { padding: 14px 0; }
-	.et_pb_section { padding: 0px 0; }
-	.single.et_pb_pagebuilder_layout.et_full_width_page .et_post_meta_wrapper { padding-top: 43px; }
-	.et_pb_section.et_pb_section_first { padding-top: inherit; }
-	.et_pb_fullwidth_section { padding: 0; }
-}
-
+h1, h2, h3, h4, h5, h6 {
+font-family: 'Open Sans', Helvetica, Arial, Lucida, sans-serif;				}
+body, input, textarea, select {
+font-family: 'Open Sans', Helvetica, Arial, Lucida, sans-serif;				}
 
 #footer-info{
 display: none;
@@ -192,29 +152,69 @@ color:#ffffff
 border: 1px solid #d8d8d8;
 }
 
-.fluid-width-video-wrapper{width:100%;position:relative;padding:0;}.fluid-width-video-wrapper iframe,.fluid-width-video-wrapper object,.fluid-width-video-wrapper embed {position:absolute;top:0;left:0;width:100%;height:100%;}
+.fluid-width-video-wrapper{width:100%;position:relative;padding:0;}
+.fluid-width-video-wrapper iframe,.fluid-width-video-wrapper object,.fluid-width-video-wrapper embed {position:absolute;top:0;left:0;width:100%;height:100%;}
 
-.et_pb_blurb_7.et_pb_blurb { margin-top: 0px !important; margin-bottom: 0px !important; }
+
+h1, h2, h3, h4, h5, h6, .et_quote_content blockquote p, .et_pb_slide_description .et_pb_slide_title {
+line-height: 1.3em;
+}
+@media only screen and ( min-width: 981px ) {
+.et_pb_section { padding: 0% 0; }
+.et_pb_section.et_pb_section_first { padding-top: inherit; }
+.et_pb_fullwidth_section { padding: 0; }
+.et_pb_row { padding: 1% 0; }
+h1 { font-size: 28px; }
+h2, .product .related h2, .et_pb_column_1_2 .et_quote_content blockquote p { font-size: 24px; }
+h3 { font-size: 20px; }
+h4, .et_pb_circle_counter h3, .et_pb_number_counter h3, .et_pb_column_1_3 .et_pb_post h2, .et_pb_column_1_4 .et_pb_post h2, .et_pb_blog_grid h2, .et_pb_column_1_3 .et_quote_content blockquote p, .et_pb_column_3_8 .et_quote_content blockquote p, .et_pb_column_1_4 .et_quote_content blockquote p, .et_pb_blog_grid .et_quote_content blockquote p, .et_pb_column_1_3 .et_link_content h2, .et_pb_column_3_8 .et_link_content h2, .et_pb_column_1_4 .et_link_content h2, .et_pb_blog_grid .et_link_content h2, .et_pb_column_1_3 .et_audio_content h2, .et_pb_column_3_8 .et_audio_content h2, .et_pb_column_1_4 .et_audio_content h2, .et_pb_blog_grid .et_audio_content h2, .et_pb_column_3_8 .et_pb_audio_module_content h2, .et_pb_column_1_3 .et_pb_audio_module_content h2, .et_pb_gallery_grid .et_pb_gallery_item h3, .et_pb_portfolio_grid .et_pb_portfolio_item h2, .et_pb_filterable_portfolio_grid .et_pb_portfolio_item h2 { font-size: 16px; }
+h5 { font-size: 14px; }
+h6 { font-size: 13px; }
+.et_pb_slide_description .et_pb_slide_title { font-size: 42px; }
+.woocommerce ul.products li.product h3, .woocommerce-page ul.products li.product h3, .et_pb_gallery_grid .et_pb_gallery_item h3, .et_pb_portfolio_grid .et_pb_portfolio_item h2, .et_pb_filterable_portfolio_grid .et_pb_portfolio_item h2, .et_pb_column_1_4 .et_pb_audio_module_content h2 { font-size: 14px; }
+.footer-widget h4 { font-size: 14px; }
+.et_header_style_left #et-top-navigation, .et_header_style_split #et-top-navigation  { padding: 28px 0 0 0; }
+.et_header_style_left #et-top-navigation nav > ul > li > a, .et_header_style_split #et-top-navigation nav > ul > li > a { padding-bottom: 28px; }
+.et_header_style_split .centered-inline-logo-wrap { width: 55px; margin: -55px 0; }
+.et_header_style_split .centered-inline-logo-wrap #logo { max-height: 55px; }
+.et_pb_svg_logo.et_header_style_split .centered-inline-logo-wrap #logo { height: 55px; }
+.et_header_style_centered #top-menu > li > a { padding-bottom: 10px; }
+.et_header_style_centered #main-header .logo_container { height: 55px; }
+#logo { max-height: 55%; }
+.et_pb_svg_logo #logo { height: 55%; }
+.et_header_style_centered.et_hide_primary_logo #main-header:not(.et-fixed-header) .logo_container, .et_header_style_centered.et_hide_fixed_logo #main-header.et-fixed-header .logo_container { height: 9.9px; }
+.et_header_style_left .et-fixed-header #et-top-navigation, .et_header_style_split .et-fixed-header #et-top-navigation { padding: 28px 0 0 0; }
+.et_header_style_left .et-fixed-header #et-top-navigation nav > ul > li > a, .et_header_style_split .et-fixed-header #et-top-navigation nav > ul > li > a  { padding-bottom: 28px; }
+.et_header_style_centered header#main-header.et-fixed-header .logo_container { height: 55px; }
+.et_header_style_split .et-fixed-header .centered-inline-logo-wrap { width: 55px; margin: -55px 0;  }
+.et_header_style_split .et-fixed-header .centered-inline-logo-wrap #logo { max-height: 55px; }
+.et_pb_svg_logo.et_header_style_split .et-fixed-header .centered-inline-logo-wrap #logo { height: 55px; }
+.et-fixed-header #top-menu a, .et-fixed-header #et_search_icon:before, .et-fixed-header #et_top_search .et-search-form input, .et-fixed-header .et_search_form_container input, .et-fixed-header .et_close_search_field:after, .et-fixed-header #et-top-navigation .et-cart-info { color: #092545 !important; }
+.et-fixed-header .et_search_form_container input::-moz-placeholder { color: #092545 !important; }
+.et-fixed-header .et_search_form_container input::-webkit-input-placeholder { color: #092545 !important; }
+.et-fixed-header .et_search_form_container input:-ms-input-placeholder { color: #092545 !important; }
+.et-fixed-header #top-menu li.current-menu-ancestor > a,
+.et-fixed-header #top-menu li.current-menu-item > a { color: #4f4f4f !important; }
+}
+@media only screen and ( min-width: 1450px) {
+.et_pb_row { padding: 14px 0; }
+.et_pb_section { padding: 0px 0; }
+.single.et_pb_pagebuilder_layout.et_full_width_page .et_post_meta_wrapper { padding-top: 43px; }
+.et_pb_section.et_pb_section_first { padding-top: inherit; }
+.et_pb_fullwidth_section { padding: 0; }
+}
+
+.et_pb_blurb_9.et_pb_blurb { margin-top: 0px !important; margin-bottom: 0px !important; }
 .et_pb_blurb_8.et_pb_blurb { margin-top: 0px !important; margin-bottom: 0px !important; }
-.et_pb_column_9 { padding-right:0px; }
-.et_pb_blurb_6.et_pb_blurb { margin-top: 0px !important; margin-bottom: 0px !important; }
-.et_pb_blurb_5.et_pb_blurb { margin-top: 0px !important; margin-bottom: 0px !important; }
-.et_pb_cta_1 { font-family: "HelveticaNeue-Regular", "Helvetica Neue Regular", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; }
-.et_pb_column_7 { background-image:url(http://www.ucontrol.de/file/2015/12/energiesparsystem-ucontrol.jpg); }
-.et_pb_blurb_4.et_pb_blurb { margin-top: 0px !important; margin-bottom: 0px !important; }
-.et_pb_text_4 { padding-right: 0px !important; }
-.et_pb_cta_2.et_pb_promo { padding-right: 0px !important; }
+.et_pb_blurb_10.et_pb_blurb { margin-top: 0px !important; margin-bottom: 0px !important; }
+.et_pb_blurb_11.et_pb_blurb { margin-top: 0px !important; margin-bottom: 0px !important; }
+.et_pb_blurb_12.et_pb_blurb { margin-top: 0px !important; margin-bottom: 0px !important; }
+.et_pb_cta_2 { font-family: "HelveticaNeue-Regular", "Helvetica Neue Regular", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; }
 body.et_button_custom_icon #page-container .et_pb_cta_2.et_pb_promo .et_pb_button:after { font-size:20px; }
-.et_pb_column_10 { background-image:url(http://www.ucontrol.de/file/2015/12/ucontrol-web-portal.jpg); padding-left:0px; }
-.et_pb_row_4 { padding-top: 0px; padding-bottom: 0px; }
-body #page-container .et_pb_cta_2.et_pb_promo .et_pb_button:after { font-size:32px;
-opacity:0; }
-body #page-container .et_pb_cta_2.et_pb_promo .et_pb_button:hover:after {
-opacity: 1; }
-body #page-container .et_pb_cta_2.et_pb_promo .et_pb_button { color:#000000 !important;
-background:#ffffff;
+body #page-container .et_pb_cta_2.et_pb_promo .et_pb_button { color:#ffffff !important;
+background:#ef8513;
 border-width:2px !important;
-border-color:#000000;
+border-color:#ffffff;
 border-radius:3px;
 letter-spacing:0px;
 font-size:20px; }
@@ -222,47 +222,77 @@ body #page-container .et_pb_cta_2.et_pb_promo .et_pb_button:hover {
 border-radius:3px;
 letter-spacing:0px;
 padding-left:0.7em; padding-right: 2em; }
-body.et_button_custom_icon #page-container .et_pb_cta_1.et_pb_promo .et_pb_button:after { font-size:20px; }
-body #page-container .et_pb_cta_1.et_pb_promo .et_pb_button:after { font-size:32px;
-opacity:0; }
-body #page-container .et_pb_cta_0.et_pb_promo .et_pb_button:after { font-size:32px;
-opacity:0; }
-body.et_button_custom_icon #page-container .et_pb_cta_0.et_pb_promo .et_pb_button:after { font-size:20px; }
-.et_pb_section_1 { background-color:#092545; }
-body #page-container .et_pb_cta_0.et_pb_promo .et_pb_button:hover:after {
+body #page-container .et_pb_cta_2.et_pb_promo .et_pb_button:hover:after {
 opacity: 1; }
-body #page-container .et_pb_cta_0.et_pb_promo .et_pb_button:hover {
-border-radius:3px;
-letter-spacing:0px;
-padding-left:0.7em; padding-right: 2em; }
-.et_pb_column_1 { padding-top:10%; }
-body #page-container .et_pb_cta_0.et_pb_promo .et_pb_button { color:#000000 !important;
+body #page-container .et_pb_cta_2.et_pb_promo .et_pb_button:after { font-size:32px;
+opacity:0; }
+.et_pb_blurb_13.et_pb_blurb { margin-top: 0px !important; margin-bottom: 0px !important; }
+body #page-container .et_pb_cta_3.et_pb_promo .et_pb_button { color:#000000 !important;
 background:#ffffff;
 border-width:2px !important;
 border-color:#000000;
 border-radius:3px;
 letter-spacing:0px;
 font-size:20px; }
-.et_pb_blurb_0.et_pb_blurb { color: #ffffff !important; }
-.et_pb_blurb_1.et_pb_blurb { color: #ffffff !important; }
-body #page-container .et_pb_cta_1.et_pb_promo .et_pb_button { color:#ffffff !important;
+.et_pb_testimonial_0 .et_pb_testimonial_portrait { width: 116px; height: 116px; }
+.et_pb_testimonial_0.et_pb_testimonial { padding-right: 100px !important; padding-left: 100px !important; }
+.et_pb_section_7 { background-color:#d4dbe3; }
+.et_pb_column_12 { padding-left:100px; }
+.et_pb_testimonial_0 .et_pb_testimonial_portrait, .et_pb_testimonial_0 .et_pb_testimonial_portrait:before { -webkit-border-radius: 90px; -moz-border-radius: 90px; border-radius: 90px; }
+.et_pb_section_5 { background-color:#fafafa; }
+body #page-container .et_pb_cta_3.et_pb_promo .et_pb_button:hover {
+border-radius:3px;
+letter-spacing:0px;
+padding-left:0.7em; padding-right: 2em; }
+body #page-container .et_pb_cta_3.et_pb_promo .et_pb_button:hover:after {
+opacity: 1; }
+body #page-container .et_pb_cta_3.et_pb_promo .et_pb_button:after { font-size:32px;
+opacity:0; }
+body.et_button_custom_icon #page-container .et_pb_cta_3.et_pb_promo .et_pb_button:after { font-size:20px; }
+.et_pb_text_5 { font-family: "HelveticaNeue-Regular", "Helvetica Neue Regular", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;font-size:20px; }
+.et_pb_section_3 { background-color:#ef8513; }
+.et_pb_cta_0 { font-family: "HelveticaNeue-Regular", "Helvetica Neue Regular", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; }
+.et_pb_section_1 { background-color:#d4dbe3; }
+.et_pb_blurb_0.et_pb_blurb { margin-top: 0px !important; margin-bottom: 0px !important; }
+.et_pb_blurb_1.et_pb_blurb { margin-top: 0px !important; margin-bottom: 0px !important; }
+body.et_button_custom_icon #page-container .et_pb_cta_0.et_pb_promo .et_pb_button:after { font-size:20px; }
+body #page-container .et_pb_cta_0.et_pb_promo .et_pb_button:after { font-size:32px;
+opacity:0; }
+.et_pb_image_0 { margin-left: 0; }
+body #page-container .et_pb_cta_0.et_pb_promo .et_pb_button { color:#ffffff !important;
 background:#ef8513;
 border-width:2px !important;
 border-color:#ef8513;
 border-radius:3px;
 letter-spacing:0px;
 font-size:20px; }
+body #page-container .et_pb_cta_0.et_pb_promo .et_pb_button:hover {
+border-radius:3px;
+letter-spacing:0px;
+padding-left:0.7em; padding-right: 2em; }
+body #page-container .et_pb_cta_0.et_pb_promo .et_pb_button:hover:after {
+opacity: 1; }
+.et_pb_section_2 { background-color:#fafafa; }
+body #page-container .et_pb_cta_1.et_pb_promo .et_pb_button { color:#000000 !important;
+background:#ffffff;
+border-width:2px !important;
+border-color:#000000;
+border-radius:3px;
+letter-spacing:0px;
+font-size:20px; }
+.et_pb_blurb_4.et_pb_blurb { margin-top: 0px !important; margin-bottom: 0px !important; }
+.et_pb_blurb_5.et_pb_blurb { margin-top: 0px !important; margin-bottom: 10px !important; }
+.et_pb_blurb_6.et_pb_blurb { margin-top: 0px !important; margin-bottom: 0px !important; }
+.et_pb_blurb_7.et_pb_blurb { margin-top: 0px !important; margin-bottom: 0px !important; }
+.et_pb_blurb_3.et_pb_blurb { margin-top: 0px !important; margin-bottom: 0px !important; }
+.et_pb_blurb_2.et_pb_blurb { margin-top: 0px !important; margin-bottom: 0px !important; }
 body #page-container .et_pb_cta_1.et_pb_promo .et_pb_button:hover {
 border-radius:3px;
 letter-spacing:0px;
 padding-left:0.7em; padding-right: 2em; }
 body #page-container .et_pb_cta_1.et_pb_promo .et_pb_button:hover:after {
 opacity: 1; }
-.et_pb_text_2 { font-size: 20px; padding-bottom: 0px !important;margin-bottom: 0px !important; font-family: "HelveticaNeue-Regular", "Helvetica Neue Regular", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; }
-.et_pb_section_2 { background-color:#fafafa; }
-.et_pb_blurb_2.et_pb_blurb { color: #ffffff !important; }
-.et_pb_blurb_3.et_pb_blurb { color: #ffffff !important; }
-.et_pb_section_0 { background-image:url(http://www.ucontrol.de/file/2015/12/ucontrol-hg.jpg); height:550px;background-position-y: bottom; }
-@media only screen and ( min-width: 981px ) {
-.et_pb_row_3 { padding-top: 0px; padding-left: 0px; }
-}
+body #page-container .et_pb_cta_1.et_pb_promo .et_pb_button:after { font-size:32px;
+opacity:0; }
+body.et_button_custom_icon #page-container .et_pb_cta_1.et_pb_promo .et_pb_button:after { font-size:20px; }
+.et_pb_section_0 { background-color:#fafafa; }
